--- a/apps/newsapp/kube/app-service.yml
+++ b/apps/newsapp/kube/app-service.yml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: news-app-svc-go
-  namespace: news-app-ns
+  name: newsapp-svc
+  namespace: newsapp-ns
   labels:
-    app: news-app-svc
-    lang: go
-
+    app: newsapp-svc
+    lang: all #select all languages
+  
 spec:
   type: NodePort
   ports:
@@ -14,5 +14,4 @@ spec:
       targetPort: 5000
       protocol: TCP
   selector:
-    app: news-app
-    lang: go
+    app: newsapp
