--- a/apps/newsapp/kube/nodejs-app-service.yml
+++ b/apps/newsapp/kube/nodejs-app-service.yml
@@ -1,18 +1,18 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: news-app-svc-nodejs
-  namespace: news-app-ns
+  name: newsapp-svc-nodejs
+  namespace: newsapp-ns
   labels:
-    app: news-app-svc
+    app: newsapp-svc
     lang: nodejs
 
 spec:
   type: NodePort
   ports:
     - port: 80
-      targetPort: 5000
-      protocol: TCP
+      targetPort: 3000
+      #protocol: TCP
   selector:
-    app: news-app
+    app: newsapp
     lang: nodejs
