--- a/apps/newsapp/kube/istio/app-vs-weight.yml
+++ b/apps/newsapp/kube/istio/app-vs-weight.yml
@@ -2,7 +2,7 @@ apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 
 metadata:
-   name: newsapp-ingress-vs
+   name: newsapp-ingress-vs-weight
    namespace: newsapp-ns
 
 spec:
@@ -13,31 +13,22 @@ spec:
    http:
    - match:
      - uri:
-        prefix: /python
+        exact: /random
+     rewrite:
+        uri: /
      route:
      - destination:
         host: newsapp-svc-python
-        port: 
+        port:
             number: 8081
-     rewrite:
-        uri: /
-   - match:
-     - uri:
-        prefix: /nodejs
-     route:
-     - destination:
-        host: newsapp-svc-nodejs
-        port: 
-            number: 80
-     rewrite:
-        uri: /
-   - match:
-     - uri:
-        prefix: /go
-     route:
+       weight: 25
      - destination:
         host: newsapp-svc-go
-        port: 
+        port:
             number: 80
-     rewrite:
-        uri: /
+       weight: 50
+     - destination:
+        host: newsapp-svc-nodejs
+        port:
+            number: 80
+       weight: 25
